chnaged layout for promotions page

--- a/html/about.html
+++ b/html/about.html
@@ -35,7 +35,7 @@
     <!-- Top Navigation Bar  -->
     <div id="top-navbar">
         <div class="top-content container">
-            <img aria-hidden="true" class="valley-mobile-logo vcs-black" src="/images/vcs-black.png" alt="valley constrcution logo" height="80px">
+            <img aria-hidden="true" class="valley-mobile-logo vcs-black" src="/images/kyle-dark-logo.png" alt="valley constrcution logo" height="80px">
             <div class="top-nav-container">
                 <div class="location">
                     <div class="icon">
@@ -139,7 +139,7 @@
         <div class="landing-dark"></div>
         <div class="container landing-group">
             <div class="landing-text">
-                <h1>About Valley Construction Supply</h1>
+                <h1>About VCS</h1>
                 <h2>Valley Construction Supply is the largest locally owned and operated
                     supplier of wholesale concrete, framing, rebar, draining and venting 
                     hardware for Seattle and the surrounding Puget Sound area.
@@ -400,7 +400,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="footer-item">
-                <img src="/images/current-logo.png" alt="valley construction logo" width="250" height="90">
+                <img src="/images/kyle-white.png" alt="valley construction logo" width="250" height="90">
                 <p class="first-p"> 
                     Here at Valley Construction Supply we believe that the construction industry is a relationship 
                     business and that our customers deserve personalized, hands-on customer service 
