--- a/html/promotions.html
+++ b/html/promotions.html
@@ -150,10 +150,10 @@
     <!--                  ADVANTECH                   -->
     <!-- ============================================ -->
 
-    <section id="advantech-promotion" class="container">
+    <section class="advantech-promotion container">
         <div class="experience">
-            <div class="image-box">
-                <img src="/images/advantech-product.jpg" alt="advantech products" height="400px" width="300px">
+            <div class="image-box adv">
+                <img src="/images/advantech-mobile.jpg" alt="">
             </div>
             <div class="experience-content">
                 <h4>Advantech Subfloor Glue</h4>
@@ -198,10 +198,10 @@
     <!--                    JOTO                      -->
     <!-- ============================================ -->
 
-    <section id="advantech-promotion" class="container">
+    <section class="advantech-promotion container">
         <div class="experience">
             <div class="image-box joto-box">
-                <img src="/images/joto-vent.jpg" alt="joto vent systems logo" height="191px" width="300px">
+                <img src="/images/joto-vent.jpg" alt="">
             </div>
             <div class="experience-content">
                 <h4>Joto-Vent Systems</h4>
@@ -250,10 +250,10 @@
     <!--                    15% OFF                   -->
     <!-- ============================================ -->
 
-    <section id="advantech-promotion" class="container">
+    <section class="advantech-promotion container discount">
         <div class="experience">
             <div class="image-box group-box">
-                <img class="group" src="/images/group.png" alt="logo for valley constructions supply weyerhaeuser and simpson strong tie" height="400px" width="300px">
+                <img src="/images/group.png" alt="">
             </div>
             <div class="experience-content">
                 <h4>Open a new list account & receive and additional 15% off your first 3 billing cycles</h4>
@@ -268,6 +268,20 @@
                     CALL VALLEY
                 </button>
             </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                    CONTACT                   -->
+    <!-- ============================================ -->
+
+    <section id="contact">
+        <div aria-hidden="true" class="clippy-sales"></div>
+        <div class="contact-group container">
+            <h2>Questions? Get in touch today.</h2>
+            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='contact.html'">
+                CONTACT VCS
+            </button>
         </div>
     </section>
 </main>
