--- a/html/promotions.html
+++ b/html/promotions.html
@@ -153,7 +153,7 @@
     <section class="advantech-promotion container">
         <div class="experience">
             <div class="image-box adv">
-                <img src="/images/advantech-mobile.jpg" alt="">
+                <img src="/images/advantech-mobile.jpg" alt="avantech can of subfloor glue">
             </div>
             <div class="experience-content">
                 <h4>Advantech Subfloor Glue</h4>
@@ -201,7 +201,7 @@
     <section class="advantech-promotion container">
         <div class="experience">
             <div class="image-box joto-box">
-                <img src="/images/joto-vent.jpg" alt="">
+                <img src="/images/joto-vent.jpg" alt="joto vent system graphics">
             </div>
             <div class="experience-content">
                 <h4>Joto-Vent Systems</h4>
@@ -253,7 +253,7 @@
     <section class="advantech-promotion container discount">
         <div class="experience">
             <div class="image-box group-box">
-                <img src="/images/group.png" alt="">
+                <img src="/images/group.png" alt="group image of three brands">
             </div>
             <div class="experience-content">
                 <h4>Open a new list account & receive and additional 15% off your first 3 billing cycles</h4>
