--- a/html/services.html
+++ b/html/services.html
@@ -139,7 +139,7 @@
         <div class="container landing-group">
             <div class="landing-text">
                 <h1>Services</h1>
-                <h2>Walley Construction Supply offers a wide range of services and products for you to choose from.
+                <h2>Valley Construction Supply offers a wide range of services and products for you to choose from.
                     These are among the many categories of constrcution products and services we offer.
                 </h2>
             </div>
