--- a/html/promotions.html
+++ b/html/promotions.html
@@ -140,6 +140,8 @@
             <div class="landing-text">
 
                 <h1>Current Promotions</h1>
+                <h2 class="container">Got questions?  Let us know!  Our staff are ready to take your call and help you with any supply need.
+                </h2>
                 
             </div>
         </div>
