aligned promotions and contact headetrs and added new logos for all pages

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -140,7 +140,7 @@
             <div class="landing-text">
 
                 <h1>Current Promotions</h1>
-                <h2 class="container">Got questions?  Let us know!  Our staff are ready to take your call and help you with any supply need.
+                <h2 class="container">We are running new promotions every so often, so check here every few months to see what new promotions we're runnning.
                 </h2>
                 
             </div>
