--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                 <div aria-hidden="true" class="item-line"></div>
 
                 <div class="location footer-location2">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon address-icon">
                         <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="footer-location-info">
@@ -658,7 +658,7 @@
                 </div>
 
                 <div class="location footer-location2">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon address-icon2">
                         <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="footer-location-info">
