fixed footer item p widths

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                 <a href="contact.html">Sales Team</a>
                 <a href="about.html">About</a>
                 <a href="products.html">Products</a>
-                <a href="rebar-fabrication.html">Rebar Fabrication</a>
+                <a href="rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-item">
