--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                 <div aria-hidden="true" class="item-line"></div>
 
                 <div class="footer-location location">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon phone-icon">
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
@@ -682,7 +682,7 @@
                 </div>
 
                 <div class="location footer-location">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon phone-icon">
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
