added periods at the end of the footer paragrpahs

--- a/html/warehouse.html
+++ b/html/warehouse.html
@@ -214,7 +214,7 @@
                 <p class="first-p"> 
                     Here at Valley Construction Supply we believe that the construction industry is a relationship 
                     business and that our customers deserve personalized, hands-on customer service 
-                    that serves them beyond their construction material needs</p>
+                    that serves them beyond their construction material needs.</p>
             </div>
             <div class="footer-item">
                 <h3>Quick Links</h3>
