chnaged footer branding

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -361,7 +361,7 @@
         <div class="branding">
             <div aria-hidden="true" class="branding-line"></div>
             <p>Designed By <span><a href="">Oak Harbor Web Designs</a></span></p>
-            <p>&copy Copyright 2019</p>
+            <p>Copyright &copy 2020</p>
         </div>
     </div>
 </footer>
