made edits based on employee feedback

--- a/html/about.html
+++ b/html/about.html
@@ -190,12 +190,10 @@
     <section id="mission">
         <div class="mission-content">
         <h2 class="container">Our Mission:</h2>
-        <p class="container">Valley Construction Supply's mission hasn't changed from the day Cliff Beatty 
-            opened the doors to passing it on to his son Mark Beatty. We strive to be loyal to our partners, 
+        <p class="container">We strive to be loyal to our partners, 
             build long lasting relationships with our customers, built on integrity while offering top-notch 
             next day service to our customers. We have always offered fair pricing and spot on billing and most 
-            importantly our word is our bond. Thank you to the ever growing list of relationships we have 
-            developed over the 35+ years who stayed loyal to Valley Construction Supply.</p>
+            importantly our word is our bond.</p>
         </div>
         <div aria-hidden="true" class="clippy-desktop-yellow"></div>  
         <div aria-hidden="true" class="clippy-desktop"></div>              
@@ -410,9 +408,9 @@
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="services.html">Services</a>
-                <a href="contact.html">Sales Team</a>
+                <a href="#sales">Sales Team</a>
                 <a href="about.html">About</a>
-                <a href="products.html">Products</a>
+                <a href="materials.html">Products</a>
                 <a href="rebar-fabrication.html">Rebar Fabrication</a>
                 <a href="contact.html">Contact</a>
             </div>
@@ -426,7 +424,7 @@
                     </div>
                     <div class="footer-location-info">
                         <p>234 Stewart Rd SE</p>
-                        <p>Pacidic, WA <br>98047</p>
+                        <p>Pacific, WA <br>98047</p>
                     </div>
                 </div>
 
