--- a/html/materials.html
+++ b/html/materials.html
@@ -356,7 +356,7 @@
                     </div>
                     <div class="footer-location-info">
                         <p>234 Stewart Rd SE</p>
-                        <p>Pacidic, WA <br>98047</p>
+                        <p>Pacific, WA <br>98047</p>
                     </div>
                 </div>
 
