--- a/html/services.html
+++ b/html/services.html
@@ -158,9 +158,8 @@
                 <h2 class="heading-lines"><span>VALLEY'S</span> SERVICES</h2>
                 <p>At Valley Construction Supply, our two warehouse locations in Marysville and 
                    Pacific make us convenient to all of your Puget Sound are construction sites.  
-                   Both locations have a complete inventory with a lage experienced staff whose 
-                   motto is "customer service is key" to ensure prompt, efficient delivery of your 
-                   order.  Know for our "can do" attitude, our services are always here to help our 
+                   Both locations have a complete inventory with experienced staff whose 
+                   motto is "customer service is key".  Known for our "can do" attitude, our services are always here to help our 
                    customers in a pinch.
                 </p>
             </div>
@@ -415,7 +414,7 @@
                     </div>
                     <div class="footer-location-info">
                         <p>234 Stewart Rd SE</p>
-                        <p>Pacidic, WA <br>98047</p>
+                        <p>Pacific, WA <br>98047</p>
                     </div>
                 </div>
 
