--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                        your construction needs.  That includes foundation materials, concrete accessories,
                        and more.
                     </p>
-                    <button type="button" onclick="location.href='html/services.html'">
+                    <button type="button" onclick="location.href='html/materials.html'">
                         Read More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
@@ -427,7 +427,7 @@
                    currently have three specials going on at the moment, check out the "Promotions" page for more info.
                 </p>
                 <button type="button" onclick="location.href='html/promotions.html'">
-                   Read More<i class="fas fa-chevron-right"></i>
+                   Learn More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
             <div class="service-card">
@@ -446,8 +446,8 @@
                    make a thorough list for drainage, foundation, framing 
                    and miscellaneous hardware.
                 </p>
-                <button type="button" onclick="location.href='html/contact.html'">
-                   Read More<i class="fas fa-chevron-right"></i>
+                <button type="button" onclick="location.href='/html/contact.html'">
+                   Learn More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
             <div class="service-card">
@@ -470,7 +470,7 @@
                     ready to order so you'll have what you need when you need it.
                 </p>
                 <button type="button" onclick="location.href='html/contact.html'">
-                    Read More<i class="fas fa-chevron-right"></i>
+                    Learn More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
             <div class="service-card last-card">
@@ -486,7 +486,7 @@
                     and Skagit County.
                 </p>
                 <button type="button" onclick="location.href='html/contact.html'">
-                    Read More<i class="fas fa-chevron-right"></i>
+                    Learn More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
             <button class="solid service-button"  type="button" onclick="location.href='html/services.html'">
@@ -546,7 +546,7 @@
                    Weyerhaeuser has been a trusted partner of ours since the day we opened
                    our doors over 35 years ago. They are the premier company for rebar manufacturing.
                 </p>
-                <button class="solid showcase-button"  type="button" onclick="location.href='html/contact.html'"m>
+                <button class="solid showcase-button"  type="button" onclick="location.href='https://www.weyerhaeuser.com/'"m>
                     Visit Weyerhaeuser
                 </button>
             </div>
@@ -636,12 +636,12 @@
             <div class="footer-item">
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
-                <a href="services.html">Services</a>
-                <a href="contact.html">Sales Team</a>
-                <a href="about.html">About</a>
-                <a href="products.html">Products</a>
-                <a href="rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
-                <a href="contact.html">Contact</a>
+                <a href="/html/services.html">Services</a>
+                <a href="/html/contact.html">Sales Team</a>
+                <a href="/html/about.html">About</a>
+                <a href="/html/products.html">Products</a>
+                <a href="/html/rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
+                <a href="/html/contact.html">Contact</a>
             </div>
             <div class="footer-item">
                 <h3>Address</h3>
