made valley employee changes

--- a/html/about.html
+++ b/html/about.html
@@ -139,9 +139,9 @@
         <div class="landing-dark"></div>
         <div class="container landing-group">
             <div class="landing-text">
-                <h1>About VCS</h1>
+                <h1>About Valley Construction Supply</h1>
                 <h2>Valley Construction Supply is the largest locally owned and operated
-                    supplier of wholesale concrete, framing, rebar, draining and venting 
+                    supplier of wholesale concrete, framing, rebar, drainage and venting 
                     hardware for Seattle and the surrounding Puget Sound area.
                 </h2>
             </div>
@@ -157,8 +157,7 @@
     <section id="communities" class="container">
         <h2><span>Building</span> Strong Relationships</h2>
         <p class="sub-text">Valley construction supply builds long lasting strong relationships 
-            through networking , customer service , Knowledgeable sales staff, having what the 
-            customer needs on our shelves & next day deliveries.</p>
+            through networking, customer service, and knowledgeable sales staff.</p>
         <div class="experience">
             <div class="image-box">
                 <img src="/images/scaffold.jpg" alt="scaffolding along a building" height="400px" width="300px">
@@ -172,10 +171,9 @@
                 <P>If your home builder  needs a quality foundation, excavator or a framing 
                    contractor we have those strong relationships to pass on, we do the same 
                    for our long time customers looking for new business and new relationships. 
-                   We call it the art of “NETWORKING” Connecting hard working, integrity driven  
-                   pro contractors with the top quality home builders in the greater Puget sound 
-                   area. At the end of the day “ all we have is our word “ and we at Valley 
-                   Construction Supply never take that lightly.</P>
+                   We call it the art of “NETWORKING”: Connecting hard working, integrity driven  
+                   contractors with the top quality home builders in the greater Puget sound 
+                   area.</P>
                 <button class="solid gallery-button"  type="button" onclick="location.href='services.html'">
                     SEE OUR SERVICES
                 </button>
