--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
                 <img src="../images/worker.jpg" alt="iron worker pulling something" width="300" height="300">
                 <div class="about-box">
-                    <h3><span>Committed to</span> the best customer service</h3>
+                    <h3><span>Committed to</span> the BEST customer service</h3>
                     <p>Valley Construction Supply is family owned and operated for 35+ years and we have been
                        working hard to ensure we provide every customer with remarkable service and up 
                        to date product knowledge.
@@ -336,9 +336,9 @@
     <section id="building-the-future">
         <div class="future-topper container">
             <h2 class="heading-lines"><span>BUILDING</span> THE FUTURE</h2>
-            <p>It's very important at VCS to stay in the know on important changes to our ever changing industry, 
-               we take pride in being the information source for all of valued customers. We consider ourselves at 
-               VCS to not only offer top notch service, and fair pricing we want to offer added value by staying on 
+            <p>It's very important at VCS to stay in the know on important changes to our ever changing industry. 
+               We take pride in being the information source for all of valued customers while offering 
+                fair pricing and added value by staying on 
                top of the Green Building changes.
             </p>
             <div class="future-icons">
@@ -368,7 +368,7 @@
                     <p>Valley Construction Supply has been involved in numerous SEISMIC upgrade projects tied to historical renovation and preservation projects.
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
-                        Read More<i class="fas fa-chevron-right"></i>
+                        Call To Learn More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
             </div>
@@ -380,7 +380,7 @@
                        changes and the new products that our customers need to know about. 
                     </p>
                     <button type="button" onclick="location.href='html/energy-code.html'">
-                        Read More<i class="fas fa-chevron-right"></i>
+                        Call To Learn More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                        have established their companies as leaders in "Green Building" industry. 
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
-                        Read More<i class="fas fa-chevron-right"></i>
+                        Call To Learn More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
             </div>
