--- a/html/rebar-fabrication.html
+++ b/html/rebar-fabrication.html
@@ -154,17 +154,16 @@
         <img src="/images/rebar.jpg" alt="rebar fabrication facility" width="450px">
         <div class="rebar-group">
             <h2><span>Valley's</span> Rebar Fabrication Facility</h2>
-            <p>Here at Valley Construction Supply, we just so happen to have our own rebar 
-               fabrication facility in Pacific, WA which is fully supported by our own fleet 
-               of delivery vehicles waiting to transport your order.  With our own facilty and 
-               distribution, any of your steel requirements and needs will be fulfilled.   <br><br>
+            <p>Valley Construction Supply has it's own rebar fabrication facility located in Pacific WA 
+                south of Seattle.  Supported by it's own feet of delivery vehicles our facility can 
+                fabricate your rebar requirements promptly and deliver your product whenever you need it.<br><br>
 
-               Our strong relationship with Weyerhaeuser provides us high quality rebar steel at 
-               a great price.  No other construction supply company in Seattle can take that rebar 
-               and turn it into structures for new single family home, 
-               commercial sites, mixed use/multi-family projects, storm water retention vaults, 
-               and retaining walls.  Whatever rebar fabrication needs you have, Valley 
-               has you covered.  Give us a call and talk to an experienced sales rep to learn more about what we can do for you to make your project go smoothly
+               Our direct mill relationships consistantly allow us to fabricate quality product at highly 
+               competitive prices. <br><br>
+
+               No other local construction material supplier has the ability to fabricate rebar specifically 
+               required for your single-family, multi-family, or commercial project.  Rebar requirements for storm 
+               water retention and site retaining also within our shops capabilities.
             </p>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VALLEY
