made the edits from johns email about erosion control, concrete accessoires, and the updated job application pdf

--- a/html/jobs.html
+++ b/html/jobs.html
@@ -154,21 +154,6 @@
         <div class="credit-container container">
             <p>Please print and fill out the form and when you are done you can either scan it and email it to us, fax it, or mail it.
             </p>
-            <ul class="app-list">
-                <li>Whether a business or a home owner/builder, billing information, and and physical
-                    address must be filled in under firm name.
-                </li>
-                <li>Tax exempt customers must send a copy of their RESELLER'S PERMIT issued from 
-                    the state.
-                </li>
-                <li>
-                    Make sure the second page is signed.
-                </li>
-                <li>
-                    Fax application back to 206-343-5840, but please mail the application as we 
-                    need the original signiature on file.
-                </li>
-            </ul>
             <p class="bottom-p">If you have any questions please call 253-447-2251.  Thank you for your inquiry and we look forward
                 to doing business with you.
             </p>
@@ -185,10 +170,10 @@
                 <button class="job-button" type="button" onclick=" window.open('/html/warehouse-driver.html', '_blank'); return false;">
                     Warehouse/Driver</button>
             </div>
-            <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+            <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment Application.pdf')">
                 CLICK TO DOWNLOAD
             </button>
-            <iframe src="https://drive.google.com/file/d/0By9ZvZAIGxnxa0dhUkxrQkdaTi1PR2lEZVNVX216QzVQX2V3/preview" width="640" height="780"></iframe>
+            <iframe src="http://127.0.0.1:5500/images/General%20Employment%20Application.pdf" width="640" height="780"></iframe>
         </div>
         <div aria-hidden="true" class="clippy-sales"></div>
     </section>
