--- a/index.html
+++ b/index.html
@@ -336,10 +336,8 @@
     <section id="building-the-future">
         <div class="future-topper container">
             <h2 class="heading-lines"><span>BUILDING</span> THE FUTURE</h2>
-            <p>It's very important at VCS to stay in the know on important changes to our ever changing industry. 
-               We take pride in being the information source for all of valued customers while offering 
-                fair pricing and added value by staying on 
-               top of the Green Building changes.
+            <p>Here at Valley Construction Supply we believe it is essential to provide our customers with
+                up to date product knowledge and consistent fair pricing. Our sales professionals
             </p>
             <div class="future-icons">
                 <div class="icon-group">
