made kyle edits, removed google drive embed of pdf becuase i cant get it to work. changed links in the furutre builders to go to external webistes that explain the topic in more detail

--- a/html/apply.html
+++ b/html/apply.html
@@ -114,7 +114,7 @@
                 <li><a href="promotions.html">PROMOTIONS</a></li>
                 <li class="contact-li"><a class="c-link active-menu" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
+                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link active-menu" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
