--- a/html/jobs.html
+++ b/html/jobs.html
@@ -114,7 +114,7 @@
                 <li><a href="promotions.html">PROMOTIONS</a></li>
                 <li class="contact-li"><a class="c-link active-menu" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link active-menu" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
+                        <li><a class="about-drop-link active-menu" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -154,9 +154,15 @@
         <div class="credit-container container">
             <p>Please print and fill out the form and when you are done you can either scan it and email it to us, fax it, or mail it.
             </p>
-            <p class="bottom-p">If you have any questions please call 253-447-2251.  Thank you for your inquiry and we look forward
-                to doing business with you.
+            <p class="bottom-p">“We are an ‘at-will’ employer and operate under the provision that employees have the
+                right to resign their position at any time, with or without notice, and with or without
+                cause, but would appreciate a 2 week notice, we the employer, have similar rights to
+                terminate the employment relationship at any time, without or without notice and with
+                or without cause.”
             </p>
+            <p class="bottom-p">Thank you for completing this application form and our interest in employment with us.
+                We would like to assure you that your opportunzity for employment with this company
+                will be based only on your merit and on no other consideration.</p>
 
             <h3 class="jobs-h3">Click on a job to see the requirements, benefits, and responsibilities for each job we are hiring for. </h3>
 
@@ -173,7 +179,7 @@
             <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment Application.pdf')">
                 CLICK TO DOWNLOAD
             </button>
-            <iframe src="http://127.0.0.1:5500/images/General%20Employment%20Application.pdf" width="640" height="780"></iframe>
+            
         </div>
         <div aria-hidden="true" class="clippy-sales"></div>
     </section>
