--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" id="Layer_5" enable-background="new 0 0 64 64" height="512px" viewBox="0 0 64 64" width="512px" class=""><g><g><path d="m35 20v2c0 1.654 1.346 3 3 3h12c1.654 0 3-1.346 3-3v-2z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/><path d="m50 39h-12c-1.654 0-3 1.346-3 3v2h18v-2c0-1.654-1.346-3-3-3z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/><path d="m39.765 29h16.356c.295 0 .584.12.793.328l.758.758c.581.581 1.385.914 2.207.914 1.721 0 3.121-1.4 3.121-3.121v-5.758c0-1.721-1.4-3.121-3.121-3.121h-26.615c-2.105 0-4.085.637-5.738 1.745-2.52-2.382-5.865-3.745-9.33-3.745h-1.196v-12c0-2.206-1.794-4-4-4s-4 1.794-4 4v12.279c-3.213.784-5.868 3.162-6.948 6.404l-.44 1.317h7.388v5c0 .779.388 1.472 1.016 2-.628.528-1.016 1.221-1.016 2v5h-7.388l.439 1.316c1.073 3.221 3.697 5.59 6.948 6.383v12.301c0 2.206 1.794 4 4 4s4-1.794 4-4v-12h1.196c3.505 0 6.845-1.347 9.362-3.732 1.687 1.121 3.681 1.732 5.707 1.732h26.615c1.721 0 3.121-1.4 3.121-3.121v-5.758c0-1.721-1.4-3.121-3.121-3.121-.822 0-1.626.333-2.207.914l-.758.758c-.209.209-.498.328-.793.328h-16.356c-2.478 0-4.808-1.12-6.378-3.012 1.535-1.84 3.839-2.988 6.378-2.988zm-28.765-11.994v-12.006c0-1.103.897-2 2-2s2 .897 2 2v12h-3.676c-.106 0-.215.002-.324.006zm-.837 2.087c.403-.061.794-.093 1.161-.093h5.676 1.196c2.872 0 5.652 1.096 7.782 3.025-1.284 1.286-2.243 2.916-2.709 4.779l-.423 1.691c-1.75-3.324-5.216-5.495-9.11-5.495h-9.21c1.166-2.104 3.249-3.548 5.637-3.907zm6.837 14.907c0-.779-.388-1.472-1.016-2 .628-.528 1.016-1.221 1.016-2v-4.331c2.333.996 4.146 3.034 4.792 5.62l.178.711-.178.71c-.637 2.549-2.426 4.602-4.792 5.613zm-3.264-9c.429 0 .85.037 1.264.1v2.304c-.587-.25-1.262-.404-2-.404s-1.413.154-2 .405v-2.405zm-2.736 5c0-.408.779-1 2-1s2 .592 2 1-.779 1-2 1-2-.592-2-1zm2 3c1.221 0 2 .592 2 1s-.779 1-2 1-2-.592-2-1 .779-1 2-1zm-8.475 8h4.475v3.635c-1.911-.596-3.51-1.889-4.475-3.635zm8.475 20c-1.103 0-2-.897-2-2v-22.404c.587.25 1.262.404 2 .404s1.413-.154 2-.404v22.404c0 1.103-.897 2-2 2zm5.196-16h-1.196v-4.554c3.322-1.111 5.873-3.813 6.731-7.25l.277-1.109c.048 1.613 1.367 2.913 2.992 2.913 1.654 0 3-1.346 3-3s-1.346-3-3-3c-1.122 0-2.09.626-2.605 1.541l.813-3.251c.926-3.703 4.238-6.29 8.056-6.29h5.736v2h2v-2h2v2h2v-2h2v2h2v-2h10.879c.618 0 1.121.503 1.121 1.121v5.758c0 .618-.503 1.121-1.121 1.121-.295 0-.584-.12-.793-.328l-.758-.758c-.581-.581-1.385-.914-2.207-.914h-16.356c-4.983 0-9.246 3.558-10.137 8.46-.369 2.024-1.271 3.921-2.609 5.483-2.211 2.578-5.426 4.057-8.823 4.057zm7.804-13c0-.551.448-1 1-1s1 .449 1 1-.448 1-1 1-1-.449-1-1zm13.765 5h16.356c.822 0 1.626-.333 2.207-.914l.758-.758c.209-.209.498-.328.793-.328.618 0 1.121.503 1.121 1.121v5.758c0 .618-.503 1.121-1.121 1.121h-10.879v-2h-2v2h-2v-2h-2v2h-2v-2h-2v2h-5.736c-1.532 0-3.037-.439-4.34-1.238 1.353-1.734 2.277-3.774 2.672-5.944.133-.735.361-1.431.669-2.079 1.933 2.057 4.637 3.261 7.5 3.261z" data-original="#000000" class=""/></g></g> </svg>
                     <h3>Rebar Fabrication</h3>
                     <div class="card-line"></div>
-                    <p>With our privately owned fabrication facility in Pacific your steel requirements 
+                    <p>With our privately owned fabrication facility in Pacific, WA, your steel requirements 
                        can be fulfilled. Using the standard ASA bar bend schedule our fabrication capacity 
                        can transform your structural reinforcing drawings into “real” life material.
                     </p>
@@ -207,7 +207,7 @@
                     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" id="Layer_5" enable-background="new 0 0 64 64" height="512px" viewBox="0 0 64 64" width="512px" class=""><g><g><path d="m26 1h-16c-1.654 0-3 1.346-3 3s1.346 3 3 3v5c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3v-5h12v5c0 1.654-1.346 3-3 3v2c2.757 0 5-2.243 5-5v-5c1.654 0 3-1.346 3-3s-1.346-3-3-3zm0 4h-16c-.552 0-1-.448-1-1s.448-1 1-1h16c.552 0 1 .448 1 1s-.448 1-1 1z" data-original="#000000" class=""/><path d="m54 1h-16c-1.654 0-3 1.346-3 3s1.346 3 3 3v5c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3v-5h12v5c0 1.654-1.346 3-3 3v2c2.757 0 5-2.243 5-5v-5c1.654 0 3-1.346 3-3s-1.346-3-3-3zm0 4h-16c-.552 0-1-.448-1-1s.448-1 1-1h16c.552 0 1 .448 1 1s-.448 1-1 1z" data-original="#000000" class=""/><path d="m50.46 61c.954-1.063 1.54-2.462 1.54-4h.414l4.666-4.666-3.25-17.334h-4.83v2h3.17l2.75 14.666-3.287 3.287c-.614-1.684-1.958-3.015-3.651-3.61.006-.114.018-.228.018-.343 0-3.309-2.691-6-6-6-1.496 0-2.886.571-3.955 1.516l1.785-9.516h3.17v-2h-4.83l-2.45 13.07c-.236-.039-.474-.07-.72-.07-.817 0-1.624.21-2.348.602-.935-1.018-2.241-1.602-3.652-1.602-.362 0-.718.045-1.065.121.698-1.877 1.065-3.869 1.065-5.892v-6.229h-22v6.229c0 5.221 2.39 10.087 6.449 13.279-.888.903-1.449 2.128-1.449 3.492 0 1.13.391 2.162 1.026 3h-8.026v2h54v-2zm-27.561-24c-.465 2.279-2.484 4-4.899 4s-4.434-1.721-4.899-4zm-13.899 4.229v-4.229h2.08c.488 3.386 3.401 6 6.92 6s6.432-2.614 6.92-6h2.08v4.229c0 2.372-.568 4.699-1.645 6.799-.958-.649-2.113-1.028-3.355-1.028-3.309 0-6 2.691-6 6 0 .033 0 .066.001.101-.271.055-.532.135-.786.232-3.898-2.797-6.215-7.278-6.215-12.104zm37 19.771h-29c-1.654 0-3-1.346-3-3 0-1.638 1.319-2.974 2.951-3l1.386.045-.255-1.236c-.055-.264-.082-.537-.082-.809 0-2.206 1.794-4 4-4s4 1.794 4 4h2c0-1.202-.359-2.321-.97-3.261.541-.47 1.24-.739 1.97-.739 1.056 0 2.015.552 2.566 1.475l.604 1.016.901-.765c.391-.331 1.041-.726 1.929-.726 1.654 0 3 1.346 3 3h2c0-1.456-.636-2.757-1.633-3.672.644-1.396 2.059-2.328 3.633-2.328 2.206 0 4 1.794 4 4-1.31 0-2.555.414-3.599 1.198l1.201 1.6c.696-.523 1.525-.798 2.398-.798 2.206 0 4 1.794 4 4s-1.794 4-4 4z" data-original="#000000" class=""/><path d="m22 35v-20c0-2.206-1.794-4-4-4s-4 1.794-4 4v20z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/><g><path d="m61 61h2v2h-2z" data-original="#000000" class=""/><path d="m1 61h2v2h-2z" data-original="#000000" class=""/><path d="m27 59h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m17 59h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m41 55v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/><g><path d="m21 57h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m33 52v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/></g><path d="m36 56v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/></g><g><path d="m47.721 43h-3.441l-2.28-6.838v-25.162h8v25.162z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/></g></g></g> </svg>
                     <h3>Erosion Control</h3>
                     <div class="card-line"></div>
-                    <p>We offer a wide variety Erosion Control Products, from Poly Sheeting, Catch Basin Socks, 
+                    <p>We offer a wide variety of Erosion Control Products, from Poly Sheeting, Catch Basin Socks, 
                        Poly Sand Bags, Reinforced Filter Fence, and numerous other Geotextile Products including 
                        Straw Bales, T/Post, Wood Stakes, and Straw Waddles.
                     </p>
@@ -232,10 +232,10 @@
                 <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
                 <img src="../images/worker.jpg" alt="iron worker pulling something" width="300" height="300">
                 <div class="about-box">
-                    <h3><span>Committed to</span> the BEST customer service</h3>
+                    <h3><span>Committed to</span> superior quality and results</h3>
                     <p>Valley Construction Supply is family owned and operated for 35+ years and we have been
-                       working hard to ensure we provide every customer with remarkable service and up 
-                       to date product knowledge.
+                       working hard to ensure we provide every customer with remarkable service and up-to-date 
+                       product knowledge.
                     </p>
                     <button class="about-content-button about solid" type="button" onclick="location.href='html/about.html'">
                         WHO WE ARE
@@ -312,7 +312,7 @@
                     <div class="numbers-item">
                         <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" id="Layer_3" enable-background="new 0 0 64 64" height="512px" viewBox="0 0 64 64" width="512px" class=""><g><path d="m61 53v-33c0-2.757-2.243-5-5-5h-9.184c-.133-.374-.335-.711-.596-1 .48-.532.78-1.229.78-2 0-1.654-1.346-3-3-3h-5.719l.583-2.332c.09-.36.136-.733.136-1.106 0-2.516-2.046-4.562-4.562-4.562h-1.159l-1.854 5.563c-.183.55-.519 1.031-.972 1.394l-2.982 2.386c-.53.424-1.196.657-1.874.657h-.597v-2h-10v6h-7c-2.757 0-5 2.243-5 5v33h-2v5c0 2.757 2.243 5 5 5h52c2.757 0 5-2.243 5-5v-5zm-6-32v28h-46v-28h6v6h10v-2h.764l2.522 1.261c.967.484 2.049.739 3.131.739h10.583c1.654 0 3-1.346 3-3 0-.395-.081-.77-.22-1.116.95-.258 1.708-.965 2.036-1.884zm-29.403-8c1.131 0 2.24-.389 3.124-1.096l2.982-2.386c.754-.603 1.315-1.407 1.62-2.323l1.394-4.181c1.281.14 2.283 1.229 2.283 2.548 0 .209-.026.418-.077.621l-1.204 4.817h8.281c.551 0 1 .449 1 1s-.449 1-1 1h-5v2h5c.551 0 1 .449 1 1s-.449 1-1 1h-5v2h5c.551 0 1 .449 1 1s-.449 1-1 1h-2-3v2h3c.551 0 1 .449 1 1s-.449 1-1 1h-10.583c-.772 0-1.545-.183-2.236-.528l-2.945-1.472h-1.236v-10zm-8.597-2h6v14h-6zm-12 9c0-1.654 1.346-3 3-3h7v2h-6c-1.103 0-2 .897-2 2v28c0 1.103.897 2 2 2h46c1.103 0 2-.897 2-2v-28c0-1.103-.897-2-2-2h-8.184c-.133-.374-.335-.711-.596-1 .26-.289.463-.626.596-1h9.184c1.654 0 3 1.346 3 3v33h-54zm56 38c0 1.654-1.346 3-3 3h-52c-1.654 0-3-1.346-3-3v-3h58z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m27 57h10v2h-10z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m39 57h2v2h-2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m23 57h2v2h-2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m42.323 37h-4.631l4.788-3h-7.802l-2.678-6.692-2.677 6.692h-7.802l4.788 3h-4.631l-2.678-6.692-2.677 6.692h-6.119l4.87 3.995-2.445 7.646 6.371-4.703 6.371 4.703-2.416-7.554 4.938-3.094.151.094-2.416 7.554 6.372-4.703 6.371 4.703-2.416-7.554.151-.094 4.938 3.094-2.416 7.554 6.372-4.703 6.371 4.703-2.445-7.646 4.87-3.995h-6.119l-2.677-6.692zm-20.741 6.358-2.582-1.906-2.582 1.906.975-3.049-1.597-1.309h1.881l1.323-3.308 1.323 3.308h2.198l-1.943 1.217zm10.418-4.906-2.582 1.906 1.004-3.142-1.943-1.216h2.198l1.323-3.308 1.323 3.308h2.198l-1.943 1.217 1.004 3.142zm16.204.548-1.597 1.31.975 3.049-2.582-1.907-2.582 1.906 1.004-3.142-1.943-1.216h2.198l1.323-3.308 1.323 3.308z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m51 31h2v-8h-4v2h2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m51 33h2v2h-2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/></g> </svg>
                         <div>
-                            <span>1st</span>
+                            <span>#1</span>
                             <h4>In Customer Service</h4>
                         </div>
                     </div>
@@ -363,10 +363,10 @@
                 <img src="../images/seismic.jpg" alt="interior of a commercial building">
                 <div class="future-card-content container">
                     <h3>Siesmic Upgrade</h3>
-                    <p>Valley Construction Supply has been involved in numerous SEISMIC upgrade projects tied to historical renovation and preservation projects.
+                    <p>Valley Construction Supply has been involved in numerous seismic upgrade projects tied to historical renovation and preservation projects.
                     </p>
-                    <button type="button" onclick="location.href='html/services.html'">
-                        Call To Learn More<i class="fas fa-chevron-right"></i>
+                    <button type="button" onclick="location.href='https://q13fox.com/2017/10/24/quake-retrofits-whats-involved-the-cost-and-how-new-nw-technology-could-help/'">
+                        Learn More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
             </div>
@@ -374,11 +374,10 @@
                 <img src="../images/net-zero.jpg" alt="plant growing inside a lightbulb">
                 <div class="future-card-content container">
                     <h3>Energy Code</h3>
-                    <p>At VCS we work really hard to stay in the loop on the Energy Code 
-                       changes and the new products that our customers need to know about. 
+                    <p>At VCS we are always in the loop on the current Energy Code updates and the latest products that our community and customers need to know about.
                     </p>
-                    <button type="button" onclick="location.href='html/energy-code.html'">
-                        Call To Learn More<i class="fas fa-chevron-right"></i>
+                    <button type="button" onclick="location.href='https://codewatcher.us/codes/seattle-code/'">
+                        Learn More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
             </div>
@@ -389,8 +388,8 @@
                     <p>Valley Construction Supply currently supports multiple customers who 
                        have established their companies as leaders in "Green Building" industry. 
                     </p>
-                    <button type="button" onclick="location.href='html/services.html'">
-                        Call To Learn More<i class="fas fa-chevron-right"></i>
+                    <button type="button" onclick="location.href='https://en.wikipedia.org/wiki/Green_building'">
+                        Learn More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
             </div>
@@ -421,8 +420,7 @@
                     </g><path d="M419.243,39.001h-76.379C331.823,28.48,316.898,22,300.479,22h-8.76C285.022,8.742,271.263,0,256,0s-29.021,8.742-35.719,22  H211.5c-16.419,0-31.343,6.48-42.384,17.001H92.759c-26.885,0-48.758,21.873-48.758,48.758v375.484  c0,26.885,21.873,48.758,48.758,48.758h326.483c26.885,0,48.758-21.873,48.758-48.758V87.759  C468.001,60.874,446.128,39.001,419.243,39.001z M211.501,42h15.586c4.498,0,8.442-3.003,9.639-7.338  C239.111,26.029,247.037,20,256.001,20s16.89,6.029,19.274,14.662c1.197,4.335,5.142,7.338,9.639,7.338h15.565  c21.705,0,39.571,16.75,41.354,38.001H170.147C171.93,58.75,189.797,42,211.501,42z M448.001,463.244  c0,15.857-12.901,28.758-28.758,28.758H92.759c-15.857,0-28.758-12.901-28.758-28.758V87.759c0-15.857,12.901-28.758,28.758-28.758  h62.347c-3.276,7.512-5.105,15.794-5.105,24.5v6.5c0,5.523,4.477,10,10,10H351.98c5.523,0,10-4.477,10-10v-6.5  c0-8.705-1.829-16.988-5.105-24.5h62.368c15.857,0,28.758,12.901,28.758,28.758V463.244z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M178.268,149.595l-42.762,42.763l-13.173-13.174c-3.905-3.904-10.237-3.904-14.143,0c-3.905,3.905-3.905,10.237,0,14.143  l20.245,20.245c1.953,1.953,4.512,2.929,7.071,2.929s5.119-0.976,7.071-2.929l49.833-49.833c3.905-3.905,3.905-10.237,0-14.143  C188.505,145.691,182.173,145.691,178.268,149.595z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,368h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,372.477,173.524,368,168.001,368z M158.001,416h-28v-28h28V416z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,260h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,264.477,173.524,260,168.001,260z M158.001,308h-28v-28h28V308z" data-original="#000000" class="active-path" style="fill:#000000"/></g> </svg>
                 <h3>Promotions And Specials</h3>
                 <p>
-                   At any given time we will be offering promotions for services, products, and on time payments.  We 
-                   currently have three specials going on at the moment, check out the "Promotions" page for more info.
+                    At any given time we will be offering promotions for services, products, and on-time payments. We currently have three specials going on at the moment, check out our "Promotions" page for more info.
                 </p>
                 <button type="button" onclick="location.href='html/promotions.html'">
                    Learn More<i class="fas fa-chevron-right"></i>
@@ -463,9 +461,8 @@
                 </g></g> </svg>
                 <h3>Fastest Fill Rates</h3>
                 <p>
-                    We have high fill rates and very few backorders.  Whatever
-                    material you need, we make sure to have them on stock and 
-                    ready to order so you'll have what you need when you need it.
+                    We have high fill rates and very few backorders. Whatever material you need, we make sure 
+                    to have them in stock and ready to order so you'll have what you need when you need it.
                 </p>
                 <button type="button" onclick="location.href='html/contact.html'">
                     Learn More<i class="fas fa-chevron-right"></i>
