adde job content

--- a/html/jobs.html
+++ b/html/jobs.html
@@ -147,13 +147,15 @@
     </section>
 
     <!-- ============================================ -->
-    <!--               CREDIT APPLICATION             -->
+    <!--                 JOB APPLICATION              -->
     <!-- ============================================ -->
 
     <section id="credit-app-google-doc-preview">
         <div class="credit-container container">
             <p>Please print and fill out the form and when you are done you can either scan it and email it to us, fax it, or mail it.
             </p>
+            <p><span>Fax:</span> North Store: 1-866-8763 South Store: 1-866-855-7764</p>
+            <p><span>Email:</span> sales7@valleyconstructionsupply.com</p>
             <p class="bottom-p">“We are an ‘at-will’ employer and operate under the provision that employees have the
                 right to resign their position at any time, with or without notice, and with or without
                 cause, but would appreciate a 2 week notice, we the employer, have similar rights to
@@ -177,7 +179,7 @@
                     Warehouse/Driver</button>
             </div>
             <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment Application.pdf')">
-                CLICK TO DOWNLOAD
+                DOWNLOAD APPLICATION
             </button>
             
         </div>
