fixed spcing issues

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -259,7 +259,7 @@
             </div>
             <div class="experience-content">
                 <h4>Open a new list account & receive and additional 15% off your first 3 billing cycles</h4>
-                <h3>Unlock the benefits! Open you new account today!</h3>
+                <h3>Unlock the benefits! <br>Open you new account today!</h3>
                 <P>Unlock the benefits! Open your new account today
                     our normal terms on a list account is 10% discount when paid in full by the 10th
                     of each month. With this new promotional account your terms will be 25%
